@@ -2,6 +2,7 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-12-05	Richard Forth   Closes #231 Respect ServerLimit.
 2017-11-01	Richard Forth   Closes #229 Removed easter egg, causing problems.
 2017-10-13	Richard Forth   Closes #223 Added an easter egg.
 				To trigger it, set maxclients /
